--- a/src/index.css
+++ b/src/index.css
@@ -99,3 +99,7 @@ code {
   flex-direction: column;
   align-items: center;
 }
+
+.logo {
+  box-shadow: 4.2px 8.3px 8.3px hsl(0deg 0% 0% / 0.37);
+}
