--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,13 @@ code {
   }
 }
 
-@media (min-width: 150px) and (max-width: 455px){
+@media (min-width: 150px) and (max-width: 400px){
+  .ant-menu {
+    font-size: 9px !important;
+  }
+}
+
+@media (min-width: 401px) and (max-width: 455px){
   .ant-menu {
     font-size: 11px !important;
   }
